# beam-college-2025-hackathon

./: README.md  agent_activities.py  analytics_client.py  analytics_worker.py  analytics_workflow.py  data_architect.py  data_engineer.py  pyproject.toml
agents/agent_implementations/: data_architect.py  data_engineer.py
agents/tools/: bigquery_tool.py
ui/: workflow_visualization.py
